Updated packages to distinguish CPU and GPU execution functionality.